# eeg-alpha

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: quarto-publish.yml
animations/: dipole_model.py
docs/: _quarto.yml  index.qmd
docs/tutorials/: 00-eeg-basics.qmd  01-hello-brainflow.qmd  01-understanding-boards.qmd  02-hello-brainflow.qmd  05-eeg-neurophysiology.qmd
examples/: 01_hello_brainflow.py  02_hello_brainflow.py
